buildscript {
  ext.kotlin_version = '1.1.1'
  repositories {
    mavenCentral()
  }

  dependencies {
    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
  }
}

apply plugin: 'java'
apply plugin: 'kotlin'

allprojects {
  apply plugin: 'java'
  sourceCompatibility = 1.8
  targetCompatibility = 1.8
}

repositories {
  mavenCentral()
  flatDir {
    dirs '../core/lib'
  }
}

dependencies {
  compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
  compile 'com.google.code.gson:gson:2.8.0'

  testCompile 'junit:junit:4.11', 'org.jmock:jmock:2.6.0', 'org.jmock:jmock-junit4:2.8.2'
}


test {
  // set heap size for the test JVM(s)
  minHeapSize = '2g'
  maxHeapSize = '4g'

  jvmArgs "-XX:MaxPermSize=1g"
}



